upgraded to Angular 14 to address XSS vuln in dependencies, updated fhirdata component to adhere to new patterns for formgroups in Angular 14

--- a/angular.json
+++ b/angular.json
@@ -124,6 +124,9 @@
           }
         }
       }
-    }},
-  "defaultProject": "swiss_app"
+    }
+  },
+  "cli": {
+    "analytics": false
+  }
 }
